--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -49,6 +49,10 @@
 			<version>1.4.4.RELEASE</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-actuator</artifactId>
+    	</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
