--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
           - config-repository
 server:
   port: 8080
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - bus-refresh
